--- a/.goreleaser.yaml
+++ b/.goreleaser.yaml
@@ -91,69 +91,69 @@ release:
 
 # Docker 镜像配置
 # FIXME: 等待 goreleaser 2.12 更新后使用 dockers_v2
-dockers:
-  - image_templates:
-      - "ghcr.io/sjzar/chatlog:{{ .Tag }}-amd64"
-      - "sjzar/chatlog:{{ .Tag }}-amd64"
-    dockerfile: Dockerfile
-    extra_files:
-      - script/docker-entrypoint.sh
-    use: buildx
-    goos: linux
-    goarch: amd64
-    build_flag_templates:
-      - "--platform=linux/amd64"
-      - "--label=org.opencontainers.image.title={{.ProjectName}}"
-      - "--label=org.opencontainers.image.description=chat log tool, easily use your own chat data."
-      - "--label=org.opencontainers.image.url=https://github.com/sjzar/chatlog"
-      - "--label=org.opencontainers.image.source=https://github.com/sjzar/chatlog"
-      - "--label=org.opencontainers.image.version={{.Version}}"
-      - "--label=org.opencontainers.image.created={{.Date}}"
-      - "--label=org.opencontainers.image.revision={{.FullCommit}}"
-      - "--label=org.opencontainers.image.licenses=Apache-2.0"
+# dockers:
+#   - image_templates:
+#       - "ghcr.io/sjzar/chatlog:{{ .Tag }}-amd64"
+#       - "sjzar/chatlog:{{ .Tag }}-amd64"
+#     dockerfile: Dockerfile
+#     extra_files:
+#       - script/docker-entrypoint.sh
+#     use: buildx
+#     goos: linux
+#     goarch: amd64
+#     build_flag_templates:
+#       - "--platform=linux/amd64"
+#       - "--label=org.opencontainers.image.title={{.ProjectName}}"
+#       - "--label=org.opencontainers.image.description=chat log tool, easily use your own chat data."
+#       - "--label=org.opencontainers.image.url=https://github.com/sjzar/chatlog"
+#       - "--label=org.opencontainers.image.source=https://github.com/sjzar/chatlog"
+#       - "--label=org.opencontainers.image.version={{.Version}}"
+#       - "--label=org.opencontainers.image.created={{.Date}}"
+#       - "--label=org.opencontainers.image.revision={{.FullCommit}}"
+#       - "--label=org.opencontainers.image.licenses=Apache-2.0"
 
-  - image_templates:
-      - "ghcr.io/sjzar/chatlog:{{ .Tag }}-arm64"
-      - "sjzar/chatlog:{{ .Tag }}-arm64"
-    dockerfile: Dockerfile
-    extra_files:
-      - script/docker-entrypoint.sh
-    use: buildx
-    goos: linux
-    goarch: arm64
-    build_flag_templates:
-      - "--platform=linux/arm64"
-      - "--label=org.opencontainers.image.title={{.ProjectName}}"
-      - "--label=org.opencontainers.image.description=chat log tool, easily use your own chat data."
-      - "--label=org.opencontainers.image.url=https://github.com/sjzar/chatlog"
-      - "--label=org.opencontainers.image.source=https://github.com/sjzar/chatlog"
-      - "--label=org.opencontainers.image.version={{.Version}}"
-      - "--label=org.opencontainers.image.created={{.Date}}"
-      - "--label=org.opencontainers.image.revision={{.FullCommit}}"
-      - "--label=org.opencontainers.image.licenses=Apache-2.0"
+#   - image_templates:
+#       - "ghcr.io/sjzar/chatlog:{{ .Tag }}-arm64"
+#       - "sjzar/chatlog:{{ .Tag }}-arm64"
+#     dockerfile: Dockerfile
+#     extra_files:
+#       - script/docker-entrypoint.sh
+#     use: buildx
+#     goos: linux
+#     goarch: arm64
+#     build_flag_templates:
+#       - "--platform=linux/arm64"
+#       - "--label=org.opencontainers.image.title={{.ProjectName}}"
+#       - "--label=org.opencontainers.image.description=chat log tool, easily use your own chat data."
+#       - "--label=org.opencontainers.image.url=https://github.com/sjzar/chatlog"
+#       - "--label=org.opencontainers.image.source=https://github.com/sjzar/chatlog"
+#       - "--label=org.opencontainers.image.version={{.Version}}"
+#       - "--label=org.opencontainers.image.created={{.Date}}"
+#       - "--label=org.opencontainers.image.revision={{.FullCommit}}"
+#       - "--label=org.opencontainers.image.licenses=Apache-2.0"
 
-# Docker manifest 配置用于多架构镜像
-docker_manifests:
-  # GitHub Container Registry manifests
-  - name_template: "ghcr.io/sjzar/chatlog:{{ .Tag }}"
-    image_templates:
-      - "ghcr.io/sjzar/chatlog:{{ .Tag }}-amd64"
-      - "ghcr.io/sjzar/chatlog:{{ .Tag }}-arm64"
+# # Docker manifest 配置用于多架构镜像
+# docker_manifests:
+#   # GitHub Container Registry manifests
+#   - name_template: "ghcr.io/sjzar/chatlog:{{ .Tag }}"
+#     image_templates:
+#       - "ghcr.io/sjzar/chatlog:{{ .Tag }}-amd64"
+#       - "ghcr.io/sjzar/chatlog:{{ .Tag }}-arm64"
 
-  # Docker Hub manifests
-  - name_template: "sjzar/chatlog:{{ .Tag }}"
-    image_templates:
-      - "sjzar/chatlog:{{ .Tag }}-amd64"
-      - "sjzar/chatlog:{{ .Tag }}-arm64"
+#   # Docker Hub manifests
+#   - name_template: "sjzar/chatlog:{{ .Tag }}"
+#     image_templates:
+#       - "sjzar/chatlog:{{ .Tag }}-amd64"
+#       - "sjzar/chatlog:{{ .Tag }}-arm64"
 
-  # GitHub Container Registry latest
-  - name_template: "{{ if not .Prerelease }}ghcr.io/sjzar/chatlog:latest{{ end }}"
-    image_templates:
-      - "ghcr.io/sjzar/chatlog:{{ .Tag }}-amd64"
-      - "ghcr.io/sjzar/chatlog:{{ .Tag }}-arm64"
+#   # GitHub Container Registry latest
+#   - name_template: "{{ if not .Prerelease }}ghcr.io/sjzar/chatlog:latest{{ end }}"
+#     image_templates:
+#       - "ghcr.io/sjzar/chatlog:{{ .Tag }}-amd64"
+#       - "ghcr.io/sjzar/chatlog:{{ .Tag }}-arm64"
 
-  # Docker Hub latest
-  - name_template: "{{ if not .Prerelease }}sjzar/chatlog:latest{{ end }}"
-    image_templates:
-      - "sjzar/chatlog:{{ .Tag }}-amd64"
-      - "sjzar/chatlog:{{ .Tag }}-arm64"
+#   # Docker Hub latest
+#   - name_template: "{{ if not .Prerelease }}sjzar/chatlog:latest{{ end }}"
+#     image_templates:
+#       - "sjzar/chatlog:{{ .Tag }}-amd64"
+#       - "sjzar/chatlog:{{ .Tag }}-arm64"
